Added comments to quest scss
Change-Id: Ib51365b7cc57cdf14c8e657a89da591c1cfc5784

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -381,7 +381,7 @@ $input-height-small: (floor($font-size-small * $line-height-small) + ($padding-s
 
 //** `.form-group` margin
 $form-group-margin-bottom: 15px !default;
-/* Start:Forms */
+/* End:Forms */
 
 $legend-color: $gray-dark !default;
 $legend-border-color: #e5e5e5 !default;
