--- a/static/bootstrap/widgets/_slick.scss
+++ b/static/bootstrap/widgets/_slick.scss
@@ -192,7 +192,7 @@ $slick-opacity-not-active: 0.25 !default;
 
 .slick-list {
   .slick-loading & {
-    background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
+    background: $slick-list-loading-bg slick-image-url("ajax-loader.gif") center center no-repeat;
   }
 }
 
@@ -235,7 +235,7 @@ $slick-opacity-not-active: 0.25 !default;
     }
   }
   &.slick-disabled:before {
-    color: #444;
+    color: $slick-arrow-disabled-color;
     opacity: $slick-opacity-not-active;
   }
   &:before {
@@ -243,7 +243,7 @@ $slick-opacity-not-active: 0.25 !default;
     font-size: 28px;
     line-height: 1;
     //color: $slick-arrow-color;
-    color: $dell-blue;
+    color: $slick-arrow-color;
     opacity: $slick-opacity-default;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -496,16 +496,16 @@ $slick-opacity-not-active: 0.25 !default;
         left: 0;
         top: 0;
         border-radius: 0;
-        background: #f5f5f5;
+        background: $slick-1170-caption-bg;
         width: 100% !important;
         span {
-          color: #007db8;
+          color: $slick-1170-caption-color;
           background-color: transparent;
           border: none;
           padding: 0;
           &:hover {
             background-color: transparent;
-            color: #007db8;
+            color: $slick-1170-caption-hover-color;
           }
         }
       }
@@ -550,7 +550,7 @@ $slick-opacity-not-active: 0.25 !default;
         left: 0;
         top: 0;
         border-radius: 0;
-        background: #f5f5f5;
+        background: $slick-770-caption-bg;
         width: 100% !important;
         span {
           color: #007db8;
