Added comments on quest variable partial.
Change-Id: I7e253a94c868d7129e1fc4274f26661200233821

--- a/static/bootstrap/custom/_variables.scss
+++ b/static/bootstrap/custom/_variables.scss
@@ -1069,10 +1069,10 @@ $slick-dots-active: #444;
 $slick-list-loading-bg: #fff;
 $slick-arrow-color: $dell-blue;
 $slick-arrow-disabled-color: #444;
-$slick-1170-caption-bg: #f55f5;
+$slick-1170-caption-bg: #f5f5f5;
 $slick-1170-caption-color: #007db8;
 $slick-1170-caption-hover-color: #007db8;
-$slick-770-caption-bg: #f55f5;
+$slick-770-caption-bg: #f5f5f5;
 $slick-770-caption-color: #007db8;
 $slick-770-caption-hover-color: #007db8;
 
