--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -1143,10 +1143,10 @@ $slick-dots-active: $text-orange;
 $slick-list-loading-bg: #fff;
 $slick-arrow-color: $dell-blue;
 $slick-arrow-disabled-color: #444;
-$slick-1170-caption-bg: #f55f5;
+$slick-1170-caption-bg: #f5f5f5;
 $slick-1170-caption-color: #007db8;
 $slick-1170-caption-hover-color: #007db8;
-$slick-770-caption-bg: #f55f5;
+$slick-770-caption-bg: #f5f5f5;
 $slick-770-caption-color: #007db8;
 $slick-770-caption-hover-color: #007db8;
 
