--- a/static/bootstrap/widgets/_slick.scss
+++ b/static/bootstrap/widgets/_slick.scss
@@ -553,13 +553,13 @@ $slick-opacity-not-active: 0.25 !default;
         background: $slick-770-caption-bg;
         width: 100% !important;
         span {
-          color: #007db8;
+          color: $slick-770-caption-color;
           background-color: transparent;
           border: none;
           padding: 0;
           &:hover {
             background-color: transparent;
-            color: #007db8;
+            color: $slick-770-caption-hover-color;
           }
         }
       }
