--- a/static/bootstrap/widgets/_featured-products.scss
+++ b/static/bootstrap/widgets/_featured-products.scss
@@ -1,40 +1,95 @@
 //Only for home page at the moment.
 .featured-products {
+	//New implementation not yet on production
+	.slick {
+		> div {
+			.product-text-wrapper {
+				height: 98px;
+			}
+			.btn {
+				margin: 19px 0 30px 0;
+			}
+		}
+	}
+	.slick-prev, .slick-next {
+		border: 1px solid $featured-products-slick-border-color;
+		padding: 5px 10px;
+		width: auto;
+		height: auto;
+	}
+	.slick-prev:before, .slick-next:before {
+		font-size: 25px;
+		font-weight: bold;
+	}
+	.slick-arrows {
+		position: relative;
+		float: right;
+		.slick-prev {
+			top: -8px;
+			right: 60px;
+			left: auto;
+			margin-right: 15px;
+		}
+		.slick-next {
+			top: -8px;
+			right: 14px;
+		}
+	}
+
+	//Old implementation on production
 	li {
 		.product-text-wrapper {
 			height: 98px;
-    }
+		}
 		.btn {
 			margin: 19px 0 30px 0;
 		}
-  }
+	}
 	.features-headline {
 		margin-bottom: 8px;
 
 		h3 {
 			margin: 4px 5px 20px 0;
 			display: inline-block;
-    }
+		}
 
 		.rr-pagination {
 			margin-top: 24px;
 		}
-  }
+	}
 }
 
 /*mobile*/
 @media (max-width: 767px) {
 	.featured-products {
+		//New implementation not yet on production
+		.slick {
+			> div {
+				margin-top: 20px;
+				&:first-child {
+					margin-top: 0;
+				}
+				&:nth-child(3) .polaris-divider, &:nth-child(9) .polaris-divider {
+					display: none !important;
+				}
+				.product-text-wrapper {
+					height: auto;
+					margin-bottom: 30px;
+				}
+			}
+		}
+
+		//Old implementation on production
 		ul li {
-      &:nth-child(3) .polaris-divider, &:nth-child(9) .polaris-divider {
-        display: none !important;
-      }
-    }
+			&:nth-child(3) .polaris-divider, &:nth-child(9) .polaris-divider {
+				display: none !important;
+			}
+		}
 		.btn-default {
 			margin-bottom: 20px;
 			margin-top: 9px;
 		}
-  }
+	}
 }
 
 @media (min-width: 768px) {
@@ -42,5 +97,11 @@
 		.pagination-container {
 			margin: 0 -15px;
 		}
-  }
+	}
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+	.slick-arrows {
+		margin-right: 40px;
+	}
 }
