--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -37,53 +37,59 @@ $natural-gray: #aaaaaa;
 $light-gray: #eeeeee;
 $body-color: #333333;
 
+//== Scaffolding
+/* Start:Global */
+$body-bg: #f9f9f9 !default; //Body bg
+$text-color: #333 !default; //Body text color
+$link-color: #016a9c !default; //Link color
+$link-hover-color: darken($link-color, 20%) !default; //Link hover color
+/* End:Global*/
+$link-hover-decoration: underline !default;
+
+
+
 /* Start:Header */
-$nav-subLinks-hover-bg: $text-orange; //Navigation sublink hover color
-$nav-subLinks-hover-color: $white;
+$nav-subLinks-hover-bg: $text-orange; //Navigation sublink hover bg
+$nav-subLinks-hover-color: $white; //Navigation sublink hover color
 $nav-border-top: $text-orange; //Navigation border top color
 $top-link: $darker-gray; //Navigation link color
 $top-link-hover: $text-orange; //Navigation link hover color
-$top-link-hover-t2: #333;
+$top-link-hover-t2: #333; //Navigation link hover color tier 2
 
-$nav-subLinks-hover-bg-t2: #e3e3e3;
-$nav-subLinks-hover-color-t2: #333333;
+$nav-subLinks-hover-bg-t2: #e3e3e3; //Navigation sublink hover bg tier 2
+$nav-subLinks-hover-color-t2: #333333; //Navigation sublink hover color tier 2
 
+$top-search-bg: $light-gray; //Top search bg
+$top-search-btn-bg: $text-orange; //Top search button bg
+$top-search-btn-hover-bg: #ff692e; //Top search button hover bg
+$top-search-btn-color: $white; //Top search button color
+$top-search-btn-hover-color: $white; //Top search button hover color
+
+$top-search-input-border-color: $natural-gray; //Top search input border color
+
+$top-user-dropdown-bg: $light-gray; //User dropdown bg
+$top-user-dropdown-color: #444; //User dropdown color
+$top-user-create-acc-bg: $white; //Create account button bg
+/* End:Header */
+$top-search-link-color: #007db8;
 $color-heading-links-hover: #007db8;
 $color-image-border: #737373;
 
-$top-search-bg: $light-gray;
-$top-search-btn-bg: $text-orange;
-$top-search-btn-hover-bg: #ff692e;
-$top-search-btn-color: $white;
-$top-search-btn-hover-color: $white;
-
-$top-search-input-border-color: $natural-gray;
-$top-search-link-color: #007db8;
-
-$top-user-dropdown-bg: $light-gray;
-$top-user-dropdown-color: #444;
-$top-user-create-acc-bg: $white;
-/* End:Header */
-
-/* Start:Carousel */
-$carasel-arrow: $text-blue;
-/* End:Carousel */
-
 /* Start:Footer */
-$footer-link-color: $darker-gray;
-$footer-link-hover-color: #00447c;
-$footer-bg-color: $white;
-$footer-top-border-color: #aaa;
+$footer-bg-color: $white; //Footer bg
+$footer-link-color: $darker-gray; //Footer link color
+$footer-link-hover-color: #00447c; //Footer link hover color
+$footer-top-border-color: #aaa; //Footer top border color
 
-$footer-top-link: $darker-gray;
+$footer-top-link: $darker-gray; //Footer top link color
 
-$footer-disclaimer-color: #cce7f3;
+$footer-disclaimer-color: #cce7f3; //Footer disclaimer color
 
-$footer-cpy-link: $darker-gray; //Copyright Link Color
-$footer-cpy-border-color: #eee;
+$footer-cpy-link: $darker-gray; //Copyright link color
+$footer-cpy-border-color: #eee; //Copyright top border color
 
-$footer-xs-border-top-color: #666666;
-$footer-li-xs-border-bottom-color: #eeeeee;
+$footer-xs-border-top-color: #666666; //Footer top border color (Mobile)
+$footer-li-xs-border-bottom-color: #eeeeee; //Footer links top border color (Mobile)
 /* End:Footer */
 
 //== Colors
@@ -98,9 +104,9 @@ $gray-light: lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
 
 /* Start:DemandBase */
-$color-demandbase-dropdown-background: #c0c0c0;
-$color-demandbase-dropdown-border: #c0c0c0;
-$color-demandbase-dropdown-div-bg-border: $white;
+$color-demandbase-dropdown-background: #c0c0c0; // Demand base dropdown bg
+$color-demandbase-dropdown-border: #c0c0c0; //Demand base dropdown border color
+$color-demandbase-dropdown-div-bg-color: $white; //Demand base dropdown div bg
 /* End:DemandBase */
 
 $brand-primary: #003876 !default; //darken(#428bca, 6.5%) !default; // #337ab7
@@ -113,22 +119,6 @@ $brand-danger: #d9534f !default;
 $header-background-color: #007db8;
 $header-link-color: #007db8;
 $color-header-link-hover: #cce7f3;
-
-//== Scaffolding
-//
-//## Settings for some of the most global styles.
-
-//** Background color for `<body>`.
-$body-bg: #f9f9f9 !default;
-//** Global text color on `<body>`.
-$text-color: #333 !default;
-
-//** Global textual link color.
-$link-color: #016a9c !default; //#003876
-//** Link hover color set via `darken()` function.
-$link-hover-color: darken($link-color, 20%) !default; // darken($link-color, 15%) #003769
-//** Link hover decoration.
-$link-hover-decoration: underline !default;
 
 //== Typography
 //
