Added comments on quest variable partial. Nav opens on click...
Change-Id: I22d8b338690883f2536a216784224885d307b434

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -181,8 +181,8 @@ $icon-anchor-hover-color: $dell-blue;
 $icon-anchor-active-color: $dell-blue;
 
 /* Start:Zombie Nav */
-$affix-border-color: #ccc;
-$affix-li-border-color: #ccc;
+$affix-border-color: #ccc; //Zombie border color
+$affix-li-border-color: #ccc; //Zombie border color
 $affix-li-active-border-color: $dell-blue;
 $affix-li-active-text-color: #444;
 $affix-li-a-focus-bg-color: transparent;
