All the changes for header and footer - quest-com - Fix nav look for Mobile / Tablet
Change-Id: I763b7c658be03ce4318467c01b9395db82dd6bc1

--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -88,7 +88,7 @@ $footer-disclaimer-color: #cce7f3; //Footer disclaimer color
 $footer-cpy-link: $darker-gray; //Copyright link color
 $footer-cpy-border-color: #eee; //Copyright top border color
 
-$footer-xs-border-top-color: #666666; //Footer top border color (Mobile)
+$footer-xs-border-top-color: #aaa; //Footer top border color (Mobile)
 $footer-li-xs-border-bottom-color: #eeeeee; //Footer links top border color (Mobile)
 /* End:Footer */
 
