--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -8,10 +8,7 @@ i.nav-arrow:before {
 	content: "\e259";
 }
 
-/*i.nav-arrow-t2:before {
-	content: "\e080";
-}*/
-
+/*
 .masthead-shadow-section {
 	content: "";
 	width: 80%;
@@ -20,7 +17,7 @@ i.nav-arrow:before {
 	border-radius: 50%;
 	box-shadow: 0 0 18px rgba(0, 0, 0, 0.5);
 	margin: -10px auto 0;
-}
+}*/
 
 .masthead {
 	margin-bottom: 10px;
@@ -29,7 +26,9 @@ i.nav-arrow:before {
 		border-bottom: none;
 		border-radius: 0;
 		z-index: 1000;
-		box-shadow: 0px 1px 7px #999999;
+		-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+		-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+		box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
 	}
 	.navbar-inverse, .navbar-toggle {
 		text-shadow: none;
@@ -38,7 +37,7 @@ i.nav-arrow:before {
 	}
 	.navbar-brand {
 		padding: 0;
-		margin: 15px 44px 15px 0;
+		margin: 15px 15px 15px 0;
 		a {
 			color: $navbar-brand-link-color;
 			&:hover {
@@ -161,6 +160,9 @@ i.nav-arrow:before {
 		li {
 			list-style-type: none;
 		}
+		i.nav-arrow {
+			float: right;
+		}
 	}
 	.search-container {
 		text-align: center;
@@ -172,25 +174,20 @@ i.nav-arrow:before {
 		width: 100%;
 		padding: 18px 15px;
 		background-color: $top-search-bg;
-		-webkit-box-shadow: 0 6px 12px #666666;
-		-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
-		-ms-box-shadow: 0 6px 12px #666666;
-		box-shadow: 0 6px 12px #666666;
-		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
+		-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+		-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+		box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
 
 		input[type=text] {
-			width: 40%;
 			border: 1px solid $top-search-input-border-color;
 			font-size: 15px;
 			padding: 4px 20px;
+			width: 92%;
 		}
 		&.open {
 			display: block;
 			+ ul .mobile-search-button {
 				background-color: $top-search-bg;
-				/*a {
-					color: $top-search-link-color;
-				}*/
 			}
 		}
 		.search-query {
@@ -226,14 +223,11 @@ i.nav-arrow:before {
 		.autocomplete-suggestions {
 			width: 100%;
 			background-color: $white;
-			-webkit-box-shadow: 2px 2px 5px #000000;
-			-webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-			-ms-box-shadow: 2px 2px 5px #000000;
-			box-shadow: 2px 2px 5px #000000;
-			box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-			border-bottom: 3px solid #007db8;
+			-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+			-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
+			box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
 			margin: 0;
-			color: #007db8;
+			color: green;
 			padding: 10px 0 10px 0;
 			line-height: 30px;
 			-webkit-transition: transform 500ms ease;
@@ -251,27 +245,14 @@ i.nav-arrow:before {
 
 		/*End of TODO*/
 	}
-	/*	.utility-section-wrapper {
-			position: relative;
-			width: 100%;
-			height: 65px;
-			padding-left: 0;
-			padding-right: 0;
-			margin: 0 -1px;
-			background-color: #ffffff;
-		}*/
+
 	ul {
 		&.tier1 {
 			padding-left: 0;
 			margin: 0;
-
-			> li a {
-				/*border-bottom: 1px solid #aaa;*/
-			}
 			li {
 				display: block;
 				padding: 0;
-				/*color: #007db8;*/
 			}
 			ul {
 				display: none;
@@ -283,7 +264,6 @@ i.nav-arrow:before {
 				padding: 0;
 
 				li {
-					/*background-color: $white;*/
 					border-bottom: none;
 					overflow: hidden;
 				}
@@ -298,10 +278,6 @@ i.nav-arrow:before {
 			}
 			li.open {
 				overflow: visible;
-
-				ul.tier3 {
-					/*border-bottom: 1px solid #aaa;*/
-				}
 			}
 		}
 		&.tier3 {
@@ -309,12 +285,8 @@ i.nav-arrow:before {
 
 			> li {
 				a {
-					/*border-bottom: 1px dotted #aaa;*/
 					padding-left: 15px;
 				}
-				/*&:first-child a {
-					border-top: none;
-				}*/
 			}
 		}
 		&.tier4 {
@@ -327,7 +299,6 @@ li {
 	> a > i.menu-indicator:before, > span > i.menu-indicator:before {
 		content: "\e60e";
 	}
-	//Siamak : removed displaying block every open element
 	&.open {
 		> ul {
 			display: block !important;
@@ -336,6 +307,19 @@ li {
 			content: "\e611";
 		}
 	}
+}
+
+i.menu-indicator {
+	font-family: icon-ui;
+	font-size: 11px;
+	font-style: normal;
+	font-weight: normal;
+	margin-right: 15px;
+	position: absolute;
+	top: 25%;
+	right: 0;
+	height: 18px;
+	padding-top: 2px;
 }
 
 #signin-container { //LI
@@ -347,7 +331,7 @@ li {
 		width: 250px;
 		border: 0;
 		color: $top-user-dropdown-color;
-		padding: 0;
+		padding: 5px 0;
 		.lnk-create-account {
 			background: $top-user-create-acc-bg;
 		}
@@ -361,7 +345,6 @@ li {
 			padding: 5px 0;
 			margin: 10px 0;
 		}
-
 		hr {
 			margin: 10px 0 5px;
 		}
@@ -394,9 +377,8 @@ li {
 			display: block;
 		}
 		> span {
-			padding: 15px;
+			padding: 10px 0 9px 20px;
 			display: block;
-			//cursor: pointer;
 		}
 		> ul {
 			display: none;
@@ -447,6 +429,17 @@ li {
 		}
 	}
 	.footer-bottom-section {
+		padding: 10px 15px 0 15px;
+		font-size: 11px;
+		a, span {
+			padding: 10px 0 9px 5px;
+		}
+		.list-inline > li a {
+			color: white;
+		}
+		span {
+			display: block;
+		}
 		ul.menu-links {
 			list-style: none;
 			margin: 0;
@@ -463,45 +456,6 @@ li {
 			}
 		}
 	}
-	.footer-top-shadow {
-		content: "";
-		width: 80%;
-		height: 10px;
-		left: 10%;
-		border-radius: 50%;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-		margin: -10px auto 0;
-		z-index: 0;
-	}
-	.footer-shadow-section {
-		content: "";
-		width: 80%;
-		height: 10px;
-		left: 10%;
-		border-radius: 50%;
-		box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-		margin: -10px auto 0;
-		z-index: 0;
-	}
-	.footer-bottom-section {
-		padding: 10px 15px 0 15px;
-		font-size: 11px;
-		a, span {
-			padding: 10px 0 9px 5px;
-		}
-		.list-inline > li a {
-			color: white;
-		}
-		span {
-			display: block;
-		}
-	}
-	.dropdown-toggle:after {
-		padding-left: 5px;
-	}
-	.menu-links {
-		list-style: none;
-	}
 	.footer-copyright-section {
 		color: $footer-cpy-link;
 		a, span {
@@ -516,26 +470,23 @@ li {
 		li {
 			border-bottom: 1px solid $footer-cpy-border-color;
 			display: block;
+			&:last-child {
+				border-bottom: none;
+			}
 		}
 
+	}
+	.dropdown-toggle:after {
+		padding-left: 5px;
+	}
+	.menu-links {
+		list-style: none;
 	}
 	.bg-light-grey {
 		a {
 			color: $bg-light-grey-link-color;
 		}
 	}
-}
-
-i.menu-indicator {
-	font-family: icon-ui;
-	font-size: 11px;
-	font-style: normal;
-	font-weight: normal;
-	margin-right: 15px;
-	position: absolute;
-	top: 25%;
-	right: 0;
-	height: 18px;
 }
 
 .ie-mobile-7 {
@@ -613,27 +564,22 @@ i.menu-indicator {
 			padding: 6px 5px;
 			/*border-radius: 0;*/
 		}
-		.input-group form {
-			div {
-				padding: 0;
-			}
-			button {
-				padding: 5px 11px;
-				background-color: $input-group-xs-btn-bg;
-				border-color: $input-group-xs-border-color;
-				background-image: none;
-				i {
-					color: $input-group-xs-icon-color !important;
-				}
-			}
-		}
-
+		/*		.input-group form {
+					div {
+						padding: 0;
+					}
+					button {
+						padding: 5px 11px;
+						background-color: $input-group-xs-btn-bg;
+						border-color: $input-group-xs-border-color;
+						background-image: none;
+						i {
+							color: $input-group-xs-icon-color !important;
+						}
+					}
+				}*/
 		.search-container {
-			text-align: left;
-			input[type=text] {
 
-				width: 92%;
-			}
 		}
 	}
 
@@ -673,6 +619,14 @@ i.menu-indicator {
 					> span {
 						> i {
 							color: $top-search-btn-hover-bg;
+						}
+						> span {
+							i {
+								color: $top-search-btn-hover-bg;
+								&:before {
+									content: "\e253";
+								}
+							}
 						}
 					}
 				}
@@ -1017,7 +971,6 @@ i.menu-indicator {
 					}
 				}
 				> li {
-					/*width: 20%;*/
 					padding-right: 6%;
 					display: inline-block;
 					vertical-align: top;
@@ -1058,11 +1011,8 @@ i.menu-indicator {
 			display: none;
 		}
 		.footer-copyright-section {
-			/*margin-top: 20px;*/
 			border-top: 1px solid #eee;
 			text-align: center;
-			/*font-size: 1.3em;*/
-
 			li {
 				border: 0;
 				display: inline-block;
@@ -1194,14 +1144,10 @@ i.menu-indicator {
 	.tier1 li.open > ul.tier2 li.subLinks:hover > ul.tier4, .tier1 li.open > ul.tier2 li.subLinks:hover > ul.tier3 {
 		display: block;
 	}
-
 	.masthead {
 		.utility {
 			float: right;
 			width: auto;
-			a {
-				padding: 22px 15px;
-			}
 			li {
 				.hidden-xs, .hidden-sm {
 					display: inline !important;
@@ -1218,6 +1164,9 @@ i.menu-indicator {
 			margin-left: auto;
 			margin-right: auto;
 			width: auto;
+			.navbar-brand {
+				margin-right: 44px;
+			}
 		}
 		.main-nav-section {
 			position: static;
@@ -1269,10 +1218,12 @@ i.menu-indicator {
 						padding: 0;
 						> a {
 							padding: 25px 15px 25px;
+							font-size: 17px;
+							margin-bottom: -4px;
 						}
 					}
-					i.menu-indicator {
-						display: none;
+					i.nav-arrow {
+						float: none;
 					}
 				}
 				&.tier1 span, &.tier2 span {
@@ -1287,10 +1238,11 @@ i.menu-indicator {
 					z-index: 999;
 					width: 280px;
 					background: #fff;
-					box-shadow: 1px 3px 8px #999999;
+					-webkit-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					-moz-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
 					li > a:hover {
 						color: $top-link-hover-t2;
-						/*background: #999;*/
 					}
 					i.menu-indicator {
 						display: block;
@@ -1300,7 +1252,7 @@ i.menu-indicator {
 					}
 					a {
 						text-decoration: none;
-						padding: 7px 10px;
+						padding: 7px 15px;
 						position: relative;
 					}
 					li.subLinks a:hover {
@@ -1311,32 +1263,10 @@ i.menu-indicator {
 						height: auto;
 						font-weight: normal;
 						overflow: visible;
-						&:hover {
-							/*background: #999999;
-							color: #333333;*/
-						}
 						&.subLinks {
 							position: initial;
-							border-top: 1px solid transparent;
-							border-bottom: 1px solid transparent;
-
-							&:hover, &:active {
-								border-right: 1px solid transparent;
-							}
 							&:hover {
 								background: #fff;
-
-								/*border-top: 1px solid #cce7f3;
-								border-bottom: 1px solid #cce7f3;
-								background: -moz-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -webkit-gradient(linear, left top, right top, color-stop(0%, #f9f9f9), color-stop(100%, #fff));
-								background: -webkit-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -o-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: -ms-linear-gradient(left, #f9f9f9 0%, #fff 100%);
-								background: linear-gradient(to right, #f9f9f9 0%, #fff 100%);
-								&:first-child {
-									border-top: 1px solid transparent;
-								}*/
 							}
 						}
 					}
@@ -1348,7 +1278,7 @@ i.menu-indicator {
 						}
 					}
 					span {
-						width: 90%;
+						width: 92%;
 					}
 					li:hover > ul {
 						position: absolute;
@@ -1385,15 +1315,20 @@ i.menu-indicator {
 					border-top: 3px solid $nav-border-top;
 					display: none;
 					float: right;
-					min-height: 100%;
+					min-height: 101%;
 					width: auto;
-					box-shadow: 1px 3px 8px #999999;
+					-webkit-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					-moz-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
 
 				}
 				li {
 					cursor: pointer;
 				}
 			}
+		}
+		.utility-section, .main-nav-section {
+			width: 1170px;
 		}
 		.nav-container {
 			display: block;
@@ -1414,7 +1349,13 @@ i.menu-indicator {
 			}
 			i.glyphicon {
 				font-size: 11px;
-				margin: 5px 0 0 5px;
+				line-height: 19px;
+			}
+		}
+		.search-container {
+			width: 100%;
+			input[type=text] {
+				width: 40%;
 			}
 		}
 		ul {
@@ -1424,11 +1365,6 @@ i.menu-indicator {
 						background: #fff;
 						color: #fb4f14;
 					}
-					/*&:hover > ul {
-						!*
-						Siamak 4
-						display: block;*!
-					}*/
 				}
 			}
 		}
@@ -1460,9 +1396,6 @@ i.menu-indicator {
 		ul.tier3 li i {
 			color: #333333;
 		}
-		ul.tier3li:hover i {
-			color: $top-link-hover;
-		}
 	}
 	.openNav {
 		.site-canvas {
@@ -1486,37 +1419,9 @@ i.menu-indicator {
 				padding: 0;
 				> li {
 					padding-left: 15px;
-					padding-right: 7%;
-				}
-			}
-		}
-	}
-}
-
-@media (min-width: 1200px) {
-	//Large desktop only
-	.masthead {
-		.utility-section, .main-nav-section {
-			width: 1170px;
-		}
-		.container {
-			width: 1170px;
-		}
-		.search-container {
-			width: 100%;
-		}
-	}
-	#footer {
-		.menu-container {
-			width: 1170px;
-		}
-		.footer-top-section {
-			ul.menu-links {
-				> li {
 					padding-right: 9%;
 				}
 			}
 		}
 	}
 }
-
